--- a/scss/init/_common.scss
+++ b/scss/init/_common.scss
@@ -165,6 +165,7 @@ table,
 .injected-section,
 .display-content,
 .display-content>.container,
+.display-content>.container::before,
 .portfolio-item-content,
 .portfolio-icon a,
 .portfolio-single img,
