--- a/scss/_setting.scss
+++ b/scss/_setting.scss
@@ -102,7 +102,7 @@ $panelWidth:180px;
                 left: 0px;
         }
 
-        #custom-background.hide {
+        .background-item.hide {
                 display: none;
         }
 
