[Global] Dynamic font line height

--- a/css/dynamic-style.css
+++ b/css/dynamic-style.css
@@ -494,7 +494,7 @@ button {
 .title-content h2 {
   font-size: 32px;
   font-weight: 900;
-  font-family: "Poppins", sans-serif !important;
+  font-family: "Poppins", sans-serif;
   margin-bottom: 0;
 }
 
