--- a/scss/base/_general.scss
+++ b/scss/base/_general.scss
@@ -271,7 +271,7 @@ button {
 .title-content h2 {
         font-size: 32px *$fontTitleScale;
         font-weight: 900;
-        font-family: $fontTitle !important;
+        font-family: $fontTitle;
         margin-bottom: 0;
 }
 
