--- a/components/basic/_button.scss
+++ b/components/basic/_button.scss
@@ -13,11 +13,11 @@
         border-radius: $borderRadius;
         padding: 10px 30px;
         transition: all 0.3s ease;
-        font-size: 22px *$fontScale;
+        font-size: 1.3rem *$fontScale;
         font-weight: 500 !important;
         display: inline-block;
 
         i {
-                font-size: 15px;
+                font-size: 1rem;
         }
 }
