--- a/scss/_setting.scss
+++ b/scss/_setting.scss
@@ -162,7 +162,7 @@ $panelWidth:180px;
 
         i {
                 // position: absolute !important;
-                font-size: 20px;
+                font-size: 1.25rem;
                 line-height: 40px;
         }
 }
@@ -219,7 +219,7 @@ $scrollbarRadius: 16px;
         display: block;
         padding: 8px 0;
         transition: all 0.5s ease;
-        font-size: 20px *$fontScale;
+        font-size: 1.25rem *$fontScale;
 }
 
 .color-scheme li a.light-scheme:hover,
