--- a/scss/_setting.scss
+++ b/scss/_setting.scss
@@ -3,252 +3,248 @@
 -------------------------*/
 
 //SETTING MAIN PANEL
-$panelWidth:180px;
+$panelWidth: 180px;
 
 .setting-section .setting-panel {
-        top: 75px;
-        z-index: 1000;
-        position: fixed;
-        transition: opacity .3s ease;
-        width: $panelWidth;
-        left: 55px;
+  top: 75px;
+  z-index: 1000;
+  position: fixed;
+  transition: opacity 0.3s ease;
+  width: $panelWidth;
+  left: 55px;
 
-        // TEXT
-        p:not(.option-label) {
-                font-size: 1.1rem *$fontScale !important;
-                margin-bottom: 6px !important;
-        }
+  // TEXT
+  p:not(.option-label) {
+    font-size: 1.1rem * $fontScale !important;
+    margin-bottom: 6px !important;
+  }
 
-        p.option-label {
-                text-align: center;
-                font-size: 1.4rem * $fontScale;
-                margin-top: 10px;
-                margin-bottom: 8px;
-                font-weight: 800;
-                display: block;
-        }
+  p.option-label {
+    text-align: center;
+    font-size: 1.4rem * $fontScale;
+    margin-top: 10px;
+    margin-bottom: 8px;
+    font-weight: 800;
+    display: block;
+  }
 
-        .customizer p.option-label {
-                margin-top: 0;
-        }
+  .customizer p.option-label {
+    margin-top: 0;
+  }
 
-        // DROPDOWN
-        .dropdown .dropdown-label {
-                min-width: 110px;
-        }
+  // DROPDOWN
+  .dropdown .dropdown-label {
+    min-width: 110px;
+  }
 
-        // BUTTON-RADIO 
-        .radio-button-group .button-border {
+  // BUTTON-RADIO
+  .radio-button-group .button-border {
+    display: inline-block;
 
-                display: inline-block;
+    // BUTTON
+    .button {
+      padding: 8px 20px;
+    }
+  }
 
-                // BUTTON
-                .button {
-                        padding: 8px 20px;
-                }
-        }
+  // RADIO
+  .radio-group-wrapper {
+    padding: 1px 64px;
+    $borderWidthDemo: 4px;
+    margin-left: -10px;
 
-        // RADIO
-        .radio-group-wrapper {
-                padding: 1px 64px;
-                $borderWidthDemo: 4px;
-                margin-left: -10px;
+    .text {
+      margin-left: 10px;
+    }
 
-                .text {
-                        margin-left: 10px;
-                }
+    #solid-border ~ label .text {
+      border: $borderWidthDemo solid $mutedBaseColor;
+    }
 
-                #solid-border~label .text {
-                        border: $borderWidthDemo solid $mutedBaseColor;
-                }
+    #double-border ~ label .text {
+      border: $borderWidthDemo double $mutedBaseColor;
+    }
 
-                #double-border~label .text {
-                        border: $borderWidthDemo double $mutedBaseColor;
-                }
+    #dotted-border ~ label .text {
+      border: $borderWidthDemo dotted $mutedBaseColor;
+    }
 
-                #dotted-border~label .text {
-                        border: $borderWidthDemo dotted $mutedBaseColor;
-                }
+    #dashed-border ~ label .text {
+      border: $borderWidthDemo dashed $mutedBaseColor;
+    }
+  }
 
-                #dashed-border~label .text {
-                        border: $borderWidthDemo dashed $mutedBaseColor;
-                }
-        }
+  // RANGE SLIDER
+  .range-slider__range {
+    width: 6rem;
+  }
 
-        // RANGE SLIDER
-        .range-slider__range {
-                width: 6rem;
-        }
+  // BACKGROUND OPTION
+  .background-item {
+    height: 250px;
+    zoom: 0.15;
+    border-radius: 60px;
+    border: $mutedBaseColor 2px solid;
+    cursor: pointer;
+  }
 
-        // BACKGROUND OPTION
-        .background-item {
-                height: 250px;
-                zoom: 0.15;
-                border-radius: 60px;
-                border: $mutedBaseColor 2px solid;
-                cursor: pointer;
-        }
+  .background-item::before {
+    opacity: 1;
+    border-radius: 60px;
+    z-index: -1;
+    content: "";
+    background-size: cover;
+    position: absolute;
+    top: 0px;
+    right: 0px;
+    bottom: 0px;
+    left: 0px;
+  }
 
-        .background-item::before {
-                opacity: 1;
-                border-radius: 60px;
-                z-index: -1;
-                content: "";
-                background-size: cover;
-                position: absolute;
-                top: 0px;
-                right: 0px;
-                bottom: 0px;
-                left: 0px;
-        }
-
-        .background-item.hide {
-                display: none;
-        }
-
+  .background-item.hide {
+    display: none;
+  }
 }
 
 .setting-panel.hide {
-        // left: -$panelWidth;
-        opacity: 0;
-        visibility: hidden;
+  // left: -$panelWidth;
+  opacity: 0;
+  visibility: hidden;
 
-        // disable buttons instantly when close the setting panel
-        .radio-button-group .button-border,
-        .radio-button-group .button-border .button {
-                // make
-                transition: opacity 0s linear !important;
-        }
+  // disable buttons instantly when close the setting panel
+  .radio-button-group .button-border,
+  .radio-button-group .button-border .button {
+    // make
+    transition: opacity 0s linear !important;
+  }
 }
 
 .setting-panel.show {
-        // left: 0;
-        opacity: 1;
-        visibility: visible;
+  // left: 0;
+  opacity: 1;
+  visibility: visible;
 }
 
 // SETTING BUTTON
 .setting-section .setting-button-border {
-        border-left: none !important;
-        top: 75px;
-        z-index: 1000;
-        position: fixed;
-        transition: all 0.3s ease;
-        transition: left .7s ease;
-        display: block;
-        height: 40px;
-        left: 0;
-        width: 40px;
-        border-top-left-radius: 0 !important;
-        border-bottom-left-radius: 0 !important;
+  border-left: none !important;
+  top: 75px;
+  z-index: 1000;
+  position: fixed;
+  transition: all 0.3s ease;
+  transition: left 0.7s ease;
+  display: block;
+  height: 40px;
+  left: 0;
+  width: 40px;
+  border-top-left-radius: 0 !important;
+  border-bottom-left-radius: 0 !important;
 
-        .setting-button {
-                border-top-left-radius: 0 !important;
-                border-bottom-left-radius: 0 !important;
-                position: fixed;
-                height: 98%;
-        }
+  .setting-button {
+    border-top-left-radius: 0 !important;
+    border-bottom-left-radius: 0 !important;
+    position: fixed;
+    height: 98%;
+  }
 
-        .cp-toggle {
-                position: fixed;
-        }
+  .cp-toggle {
+    position: fixed;
+  }
 
-        a {
-                width: 40px;
-                height: 40px;
-                display: block;
-                text-align: center;
-        }
+  a {
+    width: 40px;
+    height: 40px;
+    display: block;
+    text-align: center;
+  }
 
-        i {
-                // position: absolute !important;
-                font-size: 1.25rem;
-                line-height: 40px;
-        }
+  i {
+    // position: absolute !important;
+    font-size: 1.25rem;
+    line-height: 40px;
+  }
 }
 
 .setting-section .scrollable {
-        padding-top: 1rem;
-        border-radius: 0;
-        overflow-y: auto;
-        overflow-x: hidden;
-        height: 475px; //TODO: caculate this for reponsiveness
+  padding-top: 1rem;
+  border-radius: 0;
+  overflow-y: auto;
+  overflow-x: hidden;
+  height: 475px; //TODO: caculate this for reponsiveness
 }
 
 .setting-save-panel {
-        height: 45px;
-        padding-top: 8px;
+  height: 45px;
+  padding-top: 8px;
 }
 
 $scrollbarRadius: 16px;
 
 .setting-section .scrollable::-webkit-scrollbar {
-        width: 7px !important;
+  width: 7px !important;
 }
 
 .setting-section .scrollable::-webkit-scrollbar-track {
-        // border-radius: 0 !important;
-        // box-shadow: none !important;
-        // background: transparent !important;
+  // border-radius: 0 !important;
+  // box-shadow: none !important;
+  // background: transparent !important;
 }
 
 .setting-section .scrollable::-webkit-scrollbar-thumb {
-        border-radius: 0 !important;
+  border-radius: 0 !important;
 }
 
 .setting-section ul.pattern {
-        list-style: none outside none;
-        margin: 0 0 0;
-        overflow: hidden;
-        padding: 0;
+  list-style: none outside none;
+  margin: 0 0 0;
+  overflow: hidden;
+  padding: 0;
 }
 
 .setting-section ul.pattern li {
-        float: left;
+  float: left;
 }
 
 /*-------------------------
        COLOR SCHEME
 -------------------------*/
 .color-scheme li {
-        width: 40%;
-        margin: 0 !important;
+  width: 40%;
+  margin: 0 !important;
 }
 
 .color-scheme li a {
-        display: block;
-        padding: 8px 0;
-        transition: all 0.5s ease;
-        font-size: 1.25rem *$fontScale;
+  display: block;
+  padding: 8px 0;
+  transition: all 0.5s ease;
+  font-size: 1.25rem * $fontScale;
 }
 
 .color-scheme li a.light-scheme:hover,
 .color-scheme li a.light-scheme.active {
-        background-color: #0fcae8;
-        color: #fff;
+  background-color: #0fcae8;
+  color: #fff;
 }
 
 .color-scheme li a.dark-scheme-option:hover,
 .color-scheme li a.dark-scheme-option.active {
-        background-color: #2c2d30;
-        color: #fff;
+  background-color: #2c2d30;
+  color: #fff;
 }
 
 .theme-skin {
-        margin: 0;
-        padding: 8px 0 0 0;
+  margin: 0;
+  padding: 8px 0 0 0;
 }
 
-
 .theme-skin div a {
-        font-size: 1.15rem *$fontScale !important;
+  font-size: 1.15rem * $fontScale !important;
 }
 
 .theme-skin div {
-        padding: 1px;
-        margin-bottom: 12px;
+  padding: 1px;
+  margin-bottom: 12px;
 }
-
 
 //TODO:  COLOR PICKERS
 // ::-webkit-color-swatch-wrapper {
@@ -263,11 +259,11 @@ $scrollbarRadius: 16px;
 // }
 
 #color-panel label {
-        font-size: 1.1rem *$fontScale !important;
-        margin-bottom: 0.2rem !important;
+  font-size: 1.1rem * $fontScale !important;
+  margin-bottom: 0.2rem !important;
 }
 
 .color-picker {
-        margin: auto;
-        display: block;
+  margin: auto;
+  display: block;
 }
