--- a/scss/styles/_nes.scss
+++ b/scss/styles/_nes.scss
@@ -16,8 +16,8 @@
 
   // SETTING
   // disable this since buttons using border-image which could not has radius!
-  input#border-radius {
-    pointer-events: none;
+  #border-panel {
+    display: none;
   }
 
   .cp-toggle {
@@ -134,5 +134,23 @@
   .image-border {
     padding: 0;
     margin: 0;
+  }
+
+  .code-block {
+    border-style: solid;
+    border-width: 4px;
+    border-image-slice: 3;
+    border-image-width: 3;
+    border-image-repeat: space;
+    // TODO: Dynamic
+    // dark
+    border-image-source: url('data:image/svg+xml;utf8,<?xml version="1.0" encoding="UTF-8" ?><svg version="1.1" width="8" height="8" xmlns="http://www.w3.org/2000/svg"><path d="M3 1 h1 v1 h-1 z M4 1 h1 v1 h-1 z M2 2 h1 v1 h-1 z M5 2 h1 v1 h-1 z M1 3 h1 v1 h-1 z M6 3 h1 v1 h-1 z M1 4 h1 v1 h-1 z M6 4 h1 v1 h-1 z M2 5 h1 v1 h-1 z M5 5 h1 v1 h-1 z M3 6 h1 v1 h-1 z M4 6 h1 v1 h-1 z" fill="rgb(33,37,41)" /></svg>');
+    // light
+    //     border-image-source: url('data:image/svg+xml;utf8,<?xml version="1.0" encoding="UTF-8" ?><svg version="1.1" width="8" height="8" xmlns="http://www.w3.org/2000/svg"><path d="M3 1 h1 v1 h-1 z M4 1 h1 v1 h-1 z M2 2 h1 v1 h-1 z M5 2 h1 v1 h-1 z M1 3 h1 v1 h-1 z M6 3 h1 v1 h-1 z M1 4 h1 v1 h-1 z M6 4 h1 v1 h-1 z M2 5 h1 v1 h-1 z M5 5 h1 v1 h-1 z M3 6 h1 v1 h-1 z M4 6 h1 v1 h-1 z" fill="rgb(255,255,255)" /></svg>');
+    border-image-outset: 2;
+  }
+
+  .code-block pre {
+    padding: 0 1rem;
   }
 }
