--- a/scss/styles/_nes.scss
+++ b/scss/styles/_nes.scss
@@ -41,8 +41,6 @@
     border-radius: 0 !important;
     border-image-slice: 2;
     border-image-width: 2;
-    border-image-repeat: space;
-    // border-image-repeat: stretch;
     border-image-source: url('data:image/svg+xml;utf8,<?xml version="1.0" encoding="UTF-8" ?><svg version="1.1" width="5" height="5" xmlns="http://www.w3.org/2000/svg"><path d="M2 1 h1 v1 h-1 z M1 2 h1 v1 h-1 z M3 2 h1 v1 h-1 z M2 3 h1 v1 h-1 z" fill="rgb(33,37,41)" /></svg>');
     border-image-outset: 2;
     border-style: solid;
@@ -53,6 +51,15 @@
     text-align: center;
     vertical-align: middle;
     user-select: none;
+  }
+
+  .button {
+    //     border-image-repeat: space;
+    border-image-repeat: stretch;
+  }
+
+  .cp-toggle {
+    border-image-repeat: stretch;
   }
 
   .button::after,
@@ -136,18 +143,38 @@
     margin: 0;
   }
 
-  .code-block {
+  .code-block,
+  .box-border,
+  .setting-panel ,
+  .display-content>.container,
+  // TODO: project-domain
+  .image-border > img,
+  .image-border > .duties-item,
+  .image-border > .portfolio-item-content {
     border-style: solid;
     border-width: 4px;
     border-image-slice: 3;
     border-image-width: 3;
     border-image-repeat: space;
+    border-image-repeat: stretch;
     // TODO: Dynamic
     // dark
     border-image-source: url('data:image/svg+xml;utf8,<?xml version="1.0" encoding="UTF-8" ?><svg version="1.1" width="8" height="8" xmlns="http://www.w3.org/2000/svg"><path d="M3 1 h1 v1 h-1 z M4 1 h1 v1 h-1 z M2 2 h1 v1 h-1 z M5 2 h1 v1 h-1 z M1 3 h1 v1 h-1 z M6 3 h1 v1 h-1 z M1 4 h1 v1 h-1 z M6 4 h1 v1 h-1 z M2 5 h1 v1 h-1 z M5 5 h1 v1 h-1 z M3 6 h1 v1 h-1 z M4 6 h1 v1 h-1 z" fill="rgb(33,37,41)" /></svg>');
     // light
     //     border-image-source: url('data:image/svg+xml;utf8,<?xml version="1.0" encoding="UTF-8" ?><svg version="1.1" width="8" height="8" xmlns="http://www.w3.org/2000/svg"><path d="M3 1 h1 v1 h-1 z M4 1 h1 v1 h-1 z M2 2 h1 v1 h-1 z M5 2 h1 v1 h-1 z M1 3 h1 v1 h-1 z M6 3 h1 v1 h-1 z M1 4 h1 v1 h-1 z M6 4 h1 v1 h-1 z M2 5 h1 v1 h-1 z M5 5 h1 v1 h-1 z M3 6 h1 v1 h-1 z M4 6 h1 v1 h-1 z" fill="rgb(255,255,255)" /></svg>');
     border-image-outset: 2;
+  }
+
+  .display-content > .container {
+    background-color: $schemeColor; //TODO: Dynamic
+  }
+
+  .personal-image img,
+  .hero-image .circle,
+  .hero-image .circle-2,
+  .hero-image .floating {
+    border: $baseColor 4px solid; //TODO: Dynamic
+    opacity: 1;
   }
 
   .code-block pre {
