--- a/css/dynamic-style.css
+++ b/css/dynamic-style.css
@@ -1184,6 +1184,20 @@ input::-moz-focus-outer {
           box-shadow: inset -4px -4px #006bb3;
 }
 
+.nes-style .skillbar {
+  border-image-slice: 2;
+  border-image-width: 2;
+  border-image-repeat: stretch;
+  border-image-repeat: space;
+  border-image-source: url('data:image/svg+xml;utf8,<?xml version="1.0" encoding="UTF-8" ?><svg version="1.1" width="5" height="5" xmlns="http://www.w3.org/2000/svg"><path d="M2 1 h1 v1 h-1 z M1 2 h1 v1 h-1 z M3 2 h1 v1 h-1 z M2 3 h1 v1 h-1 z" fill="rgb(33,37,41)" /></svg>');
+  border-image-outset: 2;
+  background-clip: padding-box;
+  border-style: solid;
+  border-width: 4px;
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
+
 .nes-style .dui-radio > input {
   margin-right: 20px;
   -webkit-appearance: none;
@@ -1259,12 +1273,12 @@ input::-moz-focus-outer {
   border-image-repeat: space;
   border-image-source: url('data:image/svg+xml;utf8,<?xml version="1.0" encoding="UTF-8" ?><svg version="1.1" width="5" height="5" xmlns="http://www.w3.org/2000/svg"><path d="M2 1 h1 v1 h-1 z M1 2 h1 v1 h-1 z M3 2 h1 v1 h-1 z M2 3 h1 v1 h-1 z" fill="rgb(33,37,41)" /></svg>');
   border-image-outset: 2;
-  width: calc(100% - 8px);
-  padding: 0.5rem 1rem;
-  margin: 4px;
   background-clip: padding-box;
   border-style: solid;
   border-width: 4px;
+  width: calc(100% - 8px);
+  padding: 0.5rem 1rem;
+  margin: 4px;
 }
 
 .nes-style .dropdown,
@@ -1280,7 +1294,7 @@ input::-moz-focus-outer {
 }
 
 .nes-style .dropdown button {
-  background: none;
+  background-color: #d4d4d4;
   padding: 3px 5px;
 }
 
@@ -1308,10 +1322,16 @@ input::-moz-focus-outer {
   margin: 0;
 }
 
+.nes-style #selfEducation .image-border {
+  padding: 5px;
+  margin: 10px;
+}
+
 .nes-style .code-block,
 .nes-style .box-border,
 .nes-style .setting-panel,
 .nes-style .display-content > .container,
+.nes-style .alert,
 .nes-style .image-border > img,
 .nes-style .image-border > .duties-item,
 .nes-style .image-border > .portfolio-item-content {
